--- a/charts/unifi-controller/Chart.yaml
+++ b/charts/unifi-controller/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: Unifi Controller
+name: unifi-ontroller
 description: The Unifi-network-application software is a powerful, enterprise wireless software engine ideal for high-density client deployments requiring low latency and high uptime performance.
 appVersion: "7.3.83"
 type: application
