fix pv for unifi-controller

--- a/charts/unifi-controller/templates/deployment.yaml
+++ b/charts/unifi-controller/templates/deployment.yaml
@@ -43,5 +43,5 @@ spec:
       volumes:
         - name: config
           hostPath:
-            path: {{ .Values.persistence.data.hostPath }}
+            path: {{ .Values.persistence.config.hostPath }}
       restartPolicy: Always
