fix deployment template

--- a/charts/searxng/templates/deployment.yaml
+++ b/charts/searxng/templates/deployment.yaml
@@ -45,9 +45,10 @@ spec:
             subPath: settings.yml
             readOnly: true
           {{ end }}
-      restartPolicy: Always
       volumes:
         {{- if .Values.config.enabled }}
         - name: {{ .Values.appName }}-config
           configMap:
             name: {{ .Values.appName }}-config
+      restartPolicy: Always
+        {{ end }}
