--- a/charts/actual-server/values.yaml
+++ b/charts/actual-server/values.yaml
@@ -3,7 +3,7 @@ namespace: actual-server
 
 image:
   repository: actualbudget/actual-server
-  tag: 24.6.0@sha256:8f947694b2ac0b6db5b8629f2589a8f0fe7acbfa69013cf0bccb0a3131f1d8f3
+  tag: 24.7.0
   imagePullPolicy: IfNotPresent
 
 env:
