--- a/charts/jellyfin/templates/deployment.yaml
+++ b/charts/jellyfin/templates/deployment.yaml
@@ -42,6 +42,8 @@ spec:
           value: "{{ .Values.env.PGID }}"
         - name: NVIDIA_VISIBLE_DEVICES
           value: all
+        - name: NVIDIA_DRIVER_CAPABILITIES
+          value: compute,video,utility
         ports:
         - containerPort:  {{ .Values.service.port }}
           name:  {{ .Values.appName }}
