--- a/charts/jellyfin/templates/deployment.yaml
+++ b/charts/jellyfin/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
         - name: NVIDIA_VISIBLE_DEVICES
           value: all
         - name: NVIDIA_DRIVER_CAPABILITIES
-          value: compute,video,utility
+          value: all
         ports:
         - containerPort:  {{ .Values.service.port }}
           name:  {{ .Values.appName }}
