--- a/charts/jellyfin/templates/deployment.yaml
+++ b/charts/jellyfin/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
         - name: PGID
           value: "{{ .Values.env.PGID }}"
         - name: NVIDIA_VISIBLE_DEVICES
-          value: all
+          value: nvidia.com/gpu=all
         - name: NVIDIA_DRIVER_CAPABILITIES
           value: all
         ports:
