--- a/charts/syncstorage/values.yaml
+++ b/charts/syncstorage/values.yaml
@@ -1,5 +1,5 @@
-appName: syncstorage-rs
-namespace: syncstorage-rs
+appName: syncstorage
+namespace: syncstorage
 
 image:
   repository: urmelausmall/syncstoragersdocker
