--- a/charts/test-chart/Chart.yaml
+++ b/charts/test-chart/Chart.yaml
@@ -1,14 +1,6 @@
 apiVersion: v2
-name: actual-server
-description: Actual is a local-first personal finance tool.
-appVersion: "24.12.0"
+name: test-chart
+description: A chart that shouldn't be used
+appVersion: "1"
 type: application
-version: 0.0.9
-keywords:
-  - actual
-  - budget
-  - finances
-maintainers:
-  - name: GenericEric
-    email: eric@bgeneric.net
-    url: https://bgeneric.net
+version: 0.0.2
