--- a/charts/tandoor/Chart.yaml
+++ b/charts/tandoor/Chart.yaml
@@ -3,7 +3,8 @@ name: tandoor
 description: Application for managing recipes, planning meals, building shopping lists and much much more!
 appVersion: "1.5.34"
 type: application
-version: 0.0.1
+version: 0.0.2
+icon: https://github.com/vabene1111/recipes/raw/develop/docs/logo_color.svg
 keywords:
   - recipes
   - meals
