--- a/charts/tandoor/templates/deployment.yaml
+++ b/charts/tandoor/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name:  {{ .Values.appName }}
-        image:  "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        image:  {{ .Values.image.repository }}:{{ .Values.image.tag }}
         imagePullPolicy: {{ .Values.image.imagePullPolicy }}
         resources:
           requests:
@@ -30,47 +30,47 @@ spec:
             memory: {{ .Values.resources.limits.memory }}
         env:
         - name: TZ
-          value: "{{ .Values.env.TZ }}"
+          value: {{ .Values.env.TZ }}
         - name: SECRET_KEY
-          value: "{{ .Values.env.SECRET_KEY }}"
+          value: {{ .Values.env.SECRET_KEY }}
         - name: DB_ENGINE
-          value: "{{ .Values.env.DB_ENGINE }}"
+          value: {{ .Values.env.DB_ENGINE }}
         - name: POSTGRES_HOST
-          value: "{{ .Values.env.POSTGRES_HOST }}"
+          value: {{ .Values.env.POSTGRES_HOST }}
         - name: POSTGRES_PORT
-          value: "{{ .Values.env.POSTGRES_PORT }}"
+          value: {{ .Values.env.POSTGRES_PORT }}
         - name: POSTGRES_USER
-          value: "{{ .Values.env.POSTGRES_USER }}"
+          value: {{ .Values.env.POSTGRES_USER }}
         - name: POSTGRES_PASSWORD
-          value: "{{ .Values.env.POSTGRES_PASSWORD }}"
+          value: {{ .Values.env.POSTGRES_PASSWORD }}
         - name: POSTGRES_DB
-          value: "{{ .Values.env.POSTGRES_DB }}"
+          value: {{ .Values.env.POSTGRES_DB }}
         - name: ALLOWED_HOSTS
-          value: "{{ .Values.ingress.host }}"
+          value: {{ .Values.ingress.host }}
         - name: DB_OPTIONS
-          value: "{{ .Values.env.DB_OPTIONS }}"
+          value: {{ .Values.env.DB_OPTIONS }}
         - name: SOCIAL_PROVIDERS
-          value: "{{ .Values.env.SOCIAL_PROVIDERS }}"
+          value: {{ .Values.env.SOCIAL_PROVIDERS }}
         - name: SOCIALACCOUNT_PROVIDERS
-          value: "{{ .Values.env.SOCIALACCOUNT_PROVIDERS }}"
+          value: {{ .Values.env.SOCIALACCOUNT_PROVIDERS }}
         - name: ENABLE_PDF_EXPORT
-          value: "{{ .Values.env.ENABLE_PDF_EXPORT }}"
+          value: {{ .Values.env.ENABLE_PDF_EXPORT }}
         - name: SOCIAL_DEFAULT_ACCESS
-          value: "{{ .Values.env.SOCIAL_DEFAULT_ACCESS }}"
+          value: {{ .Values.env.SOCIAL_DEFAULT_ACCESS }}
         - name: SOCIAL_DEFAULT_GROUP
-          value: "{{ .Values.env.SOCIAL_DEFAULT_GROUP }}"
+          value: {{ .Values.env.SOCIAL_DEFAULT_GROUP }}
         - name: ENABLE_SIGNUP
-          value: "{{ .Values.env.ENABLE_SIGNUP }}"
+          value: {{ .Values.env.ENABLE_SIGNUP }}
         - name: S3_ACCESS_KEY
-          value: "{{ .Values.env.S3_ACCESS_KEY }}"
+          value: {{ .Values.env.S3_ACCESS_KEY }}
         - name: S3_SECRET_ACCESS_KEY
-          value: "{{ .Values.env.S3_SECRET_ACCESS_KEY }}"
+          value: {{ .Values.env.S3_SECRET_ACCESS_KEY }}
         - name: S3_BUCKET_NAME
-          value: "{{ .Values.env.S3_BUCKET_NAME }}"
+          value: {{ .Values.env.S3_BUCKET_NAME }}
         - name: S3_REGION_NAME
-          value: "{{ .Values.env.S3_REGION_NAME }}"
+          value: {{ .Values.env.S3_REGION_NAME }}
         - name: FDC_API_KEY
-          value: "{{ .Values.env.FDC_API_KEY }}"
+          value: {{ .Values.env.FDC_API_KEY }}
         ports:
         - containerPort:  {{ .Values.service.port }}
           name:  {{ .Values.appName }}
