--- a/charts/jellyfin/values.yaml
+++ b/charts/jellyfin/values.yaml
@@ -3,7 +3,7 @@ namespace: jellyfin
 
 image:
   repository: linuxserver/jellyfin
-  tag: 10.10.7
+  tag: 10.10.7ubu2404-ls66
   imagePullPolicy: IfNotPresent
 
 env:
