--- a/charts/jellyfin/templates/service.yaml
+++ b/charts/jellyfin/templates/service.yaml
@@ -8,7 +8,9 @@ metadata:
 spec:
   selector:
     app: {{ .Values.appName }}
-  type: ClusterIP
+  type: {{ .Values.ports.type }}
+  loadBalancerIP: {{ .Values.ports.loadBalancerIP }}
+  externalTrafficPolicy: Local
   sessionAffinity: None
   sessionAffinityConfig:
     clientIP:
@@ -18,3 +20,6 @@ spec:
     protocol: TCP
     port: {{ .Values.service.port }}
     targetPort: {{ .Values.service.port }}
+  - name: {{ .Values.appName }}-dlna
+    port: 1900
+    targetPort: 1900
